Implement ICandidateRepository and CandidateRepository, complete first DB migration, update project names, and set up dependency injection in API.

--- a/test-API/Candidate-API.Domain.csproj
+++ b/test-API/Candidate-API.Domain.csproj
@@ -7,4 +7,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
 </Project>
+
+
+
+
+
+
+
+
+
