Added CandidateService and ICandidateService; injected dependencies, created Candidate DTO and mappings.

--- a/test-API.Persistance/Candidate_API.Data.csproj
+++ b/test-API.Persistance/Candidate_API.Data.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\test-API.Domain\Candidate_API.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
