Added dependency injection mappings for CandidateService and data annotations for Candidate model.

--- a/test-API/Candidate-API.csproj
+++ b/test-API/Candidate-API.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\test-API.Persistance\Candidate_API.Data.csproj" />
+    <ProjectReference Include="..\test-API.Service\Candidate-API.Service.csproj" />
   </ItemGroup>
 
 </Project>
