Added ExceptionMiddleware and ApiResponseExtensions; modified CandidatesController for consistent API response handling.

--- a/test-API/Candidate-API.csproj
+++ b/test-API/Candidate-API.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\test-API.Service\Candidate-API.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Middleware\" />
+  </ItemGroup>
+
 </Project>
